--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,61 +1,32 @@
-/* الخلفية عامة */
-body {
-  background-color: #121212;
-  font-family: "Tahoma", sans-serif;
-  margin: 0;
-  padding: 0;
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+  gap: 20px;
+  padding: 30px;
 }
 
-/* الهيدر */
-header {
-  padding: 10px 20px;
-  box-shadow: 0 2px 6px rgba(212, 212, 212, 0.5);
+.card {
+  background: #fff;
+  border-radius: 15px;
+  padding: 30px;
+  text-align: center;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  transition: 0.3s;
+  opacity: 70%;
 }
 
-/* اللوجو */
-header .logo {
-  display: flex;
-  align-items: center;
-  gap: 15px;
-  justify-content: space-around;
+.card:hover {
+  transform: translateY(-5px);
+  background: #f5f5f5;
+  opacity: 100%;
 }
-
-header .logo img {
-  height: 50px;
-}
-
-/* اللينكات */
-header .logo a {
-  font-size: 1.2rem;
+.logo-text {
+  margin: 60px 0;
+  font-size: 40px;
   font-weight: bold;
-  color: white !important;
-  text-decoration: none;
+  text-align: center;
 }
-
-header .logo a:hover {
-  color: #0d6efd !important; /* أزرق بوتستراب */
-}
-
-/* تنسيق Navbar */
-.navbar {
-  background-color: #222 !important;
-}
-
-.navbar a {
-  color: white !important;
-  font-size: 1rem;
-  font-weight: 500;
-}
-
-.navbar a:hover {
-  color: #0d6efd !important;
-}
-
-/* العناوين */
-h1,
-h2,
-h3,
-h4,
-h5 {
-  color: white;
+.logo {
+  padding: 40px;
 }
